k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ha-app
  ports:
    - name: http
      port: 80
      targetPort: http
